--- a/src/app/album/album.component.html
+++ b/src/app/album/album.component.html
@@ -8,7 +8,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let album of albums">
+      <tr *ngFor="let album of albums | paginate:{itemsPerPage:pagingInfo.itemsPerPage,currentPage:pagingInfo.currentPage}">
         <th scope="row">{{album.id}}</th>
         <td>{{album.userId}}</td>
         <td>{{album.title}}</td>
@@ -20,3 +20,7 @@
       </tr>
     </tbody>
   </table>
+
+  <div class="text-center">
+    <pagination-controls (pageChange)="pagingInfo.currentPage = $event"></pagination-controls>
+  </div>
