--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -9,7 +9,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let post of posts">
+      <tr *ngFor="let post of posts | paginate:{itemsPerPage:pagingInfo.itemsPerPage,currentPage:pagingInfo.currentPage}">
         <th scope="row">{{post.id}}</th>
         <td>{{post.userId}}</td>
         <td>{{post.title}}</td>
@@ -22,3 +22,7 @@
       </tr>
     </tbody>
   </table>
+
+  <div class="text-center">
+    <pagination-controls (pageChange)="pagingInfo.currentPage = $event"></pagination-controls>
+  </div>
