--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -1,39 +1,43 @@
-<table class="table table-striped" *ngIf="loading == false; else loadingInfo">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">User ID</th>
-      <th scope="col">Title</th>
-      <th scope="col">Completed</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let todo of todos | paginate: {itemsPerPage: 10, currentPage: page}"  routerLink="../../todos/{{ todo.id }}">
-      <th scope="row">{{ todo.id }}</th>
-      <td>{{ todo.userId }}</td>
-      <td>{{ todo.title }}</td>
-      <td class="text-center">
-        <ng-template [ngIf]="todo.completed" [ngIfElse]="mines" class="text-center">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#198754"
-            class="bi bi-check-circle-fill" viewBox="0 0 16 16">
-            <path
-              d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z" />
-          </svg>
-        </ng-template>
-        <ng-template #mines>
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#dc3545"
-            class="bi bi-dash-circle-fill" viewBox="0 0 16 16">
-            <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM4.5 7.5a.5.5 0 0 0 0 1h7a.5.5 0 0 0 0-1h-7z"></path>
-          </svg>
-        </ng-template>
-      </td>
-    </tr>
-  </tbody>
-</table>
-<div class="text-center">
-  <pagination-controls (pageChange)="page = $event"></pagination-controls>
+<div *ngIf="loading == false; else loadingInfo">
+  <div>
+    <input type="text" class="form-control" [(ngModel)]="filterText" placeholder="Search for todos">
+  </div>
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">User ID</th>
+        <th scope="col">Title</th>
+        <th scope="col" class="text-center">Completed</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let todo of todos | todoFilter:filterText | paginate: {itemsPerPage: pagingInfo.itemsPerPage, currentPage: pagingInfo.currentPage}"  routerLink="../../todos/{{ todo.id }}">
+        <th scope="row">{{ todo.id }}</th>
+        <td>{{ todo.userId }}</td>
+        <td>{{ todo.title }}</td>
+        <td class="text-center">
+          <ng-template [ngIf]="todo.completed" [ngIfElse]="mines" class="text-center">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#198754"
+              class="bi bi-check-circle-fill" viewBox="0 0 16 16">
+              <path
+                d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z" />
+            </svg>
+          </ng-template>
+          <ng-template #mines>
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#dc3545"
+              class="bi bi-dash-circle-fill" viewBox="0 0 16 16">
+              <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM4.5 7.5a.5.5 0 0 0 0 1h7a.5.5 0 0 0 0-1h-7z"></path>
+            </svg>
+          </ng-template>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+  <div class="text-center">
+    <pagination-controls (pageChange)="pagingInfo.currentPage = $event"></pagination-controls>
+  </div>
 </div>
-
 
 <ng-template #loadingInfo>
   <div class="text-center">
