--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,5 +1,10 @@
-<div class="list-group" *ngIf="loading==false;else loadingInfo">
-    <a *ngFor="let user of users" class="list-group-item" routerLink="user-todos/{{user.id}}" routerLinkActive="active">{{ user.name }}</a>
+<div *ngIf="loading==false;else loadingInfo">
+  <div>
+    <input type="text" [(ngModel)]="filterText" class="form-control" placeholder="Search for users">
+  </div>
+  <div class="list-group">
+      <a *ngFor="let user of users | userFilter:filterText" class="list-group-item" routerLink="user-todos/{{user.id}}" routerLinkActive="active">{{ user.name }}</a>
+  </div>
 </div>
 
 <ng-template #loadingInfo>
