--- a/src/app/navi/navi.component.html
+++ b/src/app/navi/navi.component.html
@@ -13,6 +13,9 @@
             <a class="nav-link" routerLink="/todos" routerLinkActive="active">Todos</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" routerLink="/todos/add" routerLinkActive="active">Add Todo</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" routerLink="/albums" routerLinkActive="active">Albums</a>
           </li>
           <li class="nav-item">
