--- a/src/app/todo-add/todo-add.component.html
+++ b/src/app/todo-add/todo-add.component.html
@@ -6,16 +6,41 @@
       </div>
       <div class="card-body">
         <form [formGroup]="todoAddForm">
-          <div class="form-group">
-            <input
-              type="text"
-              id="title"
-              class="form-control"
-              formControlName="title"
-              placeholder="Todo ismi"
-            />
+          <div class="mb-3">
+            <label for="title">Todo ismi</label>
+            <div class="form-group">
+              <input
+                type="text"
+                id="title"
+                class="form-control"
+                formControlName="title"
+                placeholder="Todo ismi"
+              />
+            </div>
+          </div>
+          <div class="mb-3">
+            <label for="userId">User ID</label>
+            <div class="form-group">
+              <select class="form-select" formControlName="userId">
+                <option value="" disabled>Choose user</option>
+                <option *ngFor="let user of users" value={{user.id}}>{{user.name}}</option>
+              </select>
+            </div>
+          </div>
+          <div class="mb-3">
+            <label for="completed">Tamamlanma Durumu</label>
+            <div class="form-group">
+              <select class="form-select" formControlName="completed">
+                <option value="" disabled>Choose a completed status</option>
+                <option [ngValue]="true">True</option>
+                <option [ngValue]="false">False</option>
+              </select>
+            </div>
           </div>
         </form>
+      </div>
+      <div class="card-footer">
+          <button class="btn btn-success" (click)="add()">Ekle</button>
       </div>
     </div>
   </div>
