--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -9,13 +9,14 @@
         <th scope="col">User ID</th>
         <th scope="col">Title</th>
         <th scope="col" class="text-center">Completed</th>
+        <th scope="col" class="text-center">Delete</th>
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let todo of todos | todoFilter:filterText | paginate: {itemsPerPage: pagingInfo.itemsPerPage, currentPage: pagingInfo.currentPage}"  routerLink="../../todos/{{ todo.id }}">
+      <tr *ngFor="let todo of todos | todoFilter:filterText | paginate: {itemsPerPage: pagingInfo.itemsPerPage, currentPage: pagingInfo.currentPage}" >
         <th scope="row">{{ todo.id }}</th>
         <td>{{ todo.userId }}</td>
-        <td>{{ todo.title }}</td>
+        <td routerLink="/../todos/{{ todo.id }}">{{ todo.title }}</td>
         <td class="text-center">
           <ng-template [ngIf]="todo.completed" [ngIfElse]="mines" class="text-center">
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#198754"
@@ -30,6 +31,11 @@
               <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM4.5 7.5a.5.5 0 0 0 0 1h7a.5.5 0 0 0 0-1h-7z"></path>
             </svg>
           </ng-template>
+        </td>
+        <td class="text-center">
+          <svg xmlns="http://www.w3.org/2000/svg" (click)="delete(todo.id)" width="20" height="20" fill="currentColor" class="bi bi-trash-fill" viewBox="0 0 16 16" style="cursor:pointer">
+            <path d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0z"/>
+          </svg>
         </td>
       </tr>
     </tbody>
