user add-update-delete eklendi.

--- a/src/app/navi/navi.component.html
+++ b/src/app/navi/navi.component.html
@@ -16,17 +16,23 @@
             <a class="nav-link" routerLink="/todos/add" routerLinkActive="active">Add Todo</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" routerLink="/users" routerLinkActive="active">Users</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/users/add" routerLinkActive="active">Add User</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" routerLink="/albums" routerLinkActive="active">Albums</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLink="/favorites" routerLinkActive="active">Favorite Albums</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" routerLink="/posts" routerLinkActive="active">Posts</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLink="/favorite-posts" routerLinkActive="active">Favorite Posts</a>
-          </li>
+          </li> -->
         </ul>
       </div>
     </div>
