navi change commit

--- a/src/app/album/album.component.html
+++ b/src/app/album/album.component.html
@@ -4,7 +4,7 @@
         <th scope="col">#</th>
         <th scope="col">User ID</th>
         <th scope="col">Title</th>
-        <th scope="col">Favorilere Ekle</th>
+        <th scope="col" class="text-center">Favorilere Ekle</th>
       </tr>
     </thead>
     <tbody>
